--- a/community-modules/core/src/styles/ag-theme-alpine/sass/_ag-theme-alpine-mixin.scss
+++ b/community-modules/core/src/styles/ag-theme-alpine/sass/_ag-theme-alpine-mixin.scss
@@ -13,7 +13,7 @@
     .ag-header-row,
     .ag-panel-title-bar-title {
         font-weight: 700;
-        @include ag-css-var-override(color, header-foreground-color);
+        @include ag-color-param(color, header-foreground-color);
     }
 
     .ag-row {
@@ -34,15 +34,15 @@
         transition: color 0.4s;
     }
     .ag-tab-selected {
-        @include ag-css-var-override(color, alpine-active-color);
+        @include ag-color-param(color, alpine-active-color);
     }
 
     .ag-menu {
-        @include ag-css-var-override(background-color, control-panel-background-color);
+        @include ag-color-param(background-color, control-panel-background-color);
     }
 
     .ag-menu-header {
-        @include ag-css-var-override(background-color, control-panel-background-color);
+        @include ag-color-param(background-color, control-panel-background-color);
         padding-top: 1px; // hack to align column menu tab header border with header row border
     }
     
@@ -58,7 +58,7 @@
     }
 
     .ag-chart-mini-thumbnail {
-        @include ag-css-var-override(background-color, background-color);
+        @include ag-color-param(background-color, background-color);
     }
     
     .ag-chart-settings-nav-bar {
@@ -76,7 +76,7 @@
 
     .ag-charts-format-sub-level-group {
         border-left: dashed 1px;
-        @include ag-css-var-override(border-left-color, border-color);
+        @include ag-color-param(border-left-color, border-color);
         padding-left: ag-param(grid-size);
         margin-bottom: ag-param(grid-size) * 2;
     }
@@ -110,21 +110,22 @@
         -webkit-appearance: none;
         border-radius: ag-param(border-radius);
         border: 1px solid;
-        @include ag-css-var-override(border-color, alpine-active-color);
-        @include ag-css-var-override(color, alpine-active-color);
-        @include ag-css-var-override(background, background-color);
+        @include ag-color-param(border-color, alpine-active-color);
+        @include ag-color-param(color, alpine-active-color);
+        @include ag-color-param(background, background-color);
         font-weight: 600;
         padding: ag-param(grid-size) ag-param(grid-size) * 2;
     
         &:hover {
-            @include ag-css-var-override(border-color, alpine-active-color);
+            @include ag-color-param(border-color, alpine-active-color);
+            @include ag-color-param();
             background-color: rgba(ag-param(alpine-active-color), 0.1);
         }
     
         &:active {
-            @include ag-css-var-override(border-color, alpine-active-color);
-            @include ag-css-var-override(background-color, alpine-active-color);
-            @include ag-css-var-override(color, background-color);
+            @include ag-color-param(border-color, alpine-active-color);
+            @include ag-color-param(background-color, alpine-active-color);
+            @include ag-color-param(color, background-color);
         }
     }
 
@@ -150,7 +151,7 @@
         display: flex;
         align-items: center;
         border: dashed 1px;
-        @include ag-css-var-override(border-color, border-color);
+        @include ag-color-param(border-color, border-color);
         margin: ag-param(grid-size) * 2;
         padding: ag-param(grid-size) * 2;
     }
@@ -194,7 +195,7 @@
     .ag-floating-filter-button-button,
     .ag-filter-toolpanel-expand {
         &:hover {
-            @include ag-css-var-override(color, alpine-active-color);
+            @include ag-color-param(color, alpine-active-color);
         }
     }
 
@@ -215,9 +216,9 @@
 
     .ag-filter-toolpanel-instance-filter {
         border: none;
-        @include ag-css-var-override(background-color, control-panel-background-color);
+        @include ag-color-param(background-color, control-panel-background-color);
         border-left: dashed 1px;
-        @include ag-css-var-override(border-left-color, border-color);
+        @include ag-color-param(border-left-color, border-color);
         margin-left: ag-param(grid-size) + ag-param(icon-size) / 2 - 1px;
         padding-left: ag-param(icon-size) / 2;
         margin-right: ag-param(grid-size) * 2;
@@ -233,7 +234,7 @@
     }
 
     .ag-date-time-list-page-entry-is-current {
-        @include ag-css-var-override(background-color, alpine-active-color);
+        @include ag-color-param(background-color, alpine-active-color);
     }
     $ag-require-all-colors-to-use-mixin: false !global;
 }
