--- a/community-modules/core/src/styles/ag-theme-base/sass/_ag-theme-base-mixin.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/_ag-theme-base-mixin.scss
@@ -27,12 +27,12 @@ $ag-compatibility-mode: "variables" !default;
     @include ag-icons-webfont();
 
     -webkit-font-smoothing: antialiased;
-    @include ag-css-var-override(color, foreground-color);
+    @include ag-color-param(color, foreground-color);
     font-family: ag-param(font-family);
     font-size: ag-param(font-size);
     line-height: normal;
     .ag-root-wrapper {
-        @include ag-css-var-override(background-color, background-color);
+        @include ag-color-param(background-color, background-color);
     }
 
     @include ag-theme-base-part-reset();
