--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_menu.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_menu.scss
@@ -19,7 +19,7 @@
     }
 
     .ag-menu-option-active {
-        @include ag-css-var-override(background-color, row-hover-color);
+        @include ag-color-param(background-color, row-hover-color);
     }
 
     .ag-menu-option-disabled {
@@ -85,16 +85,16 @@
 
     .ag-keyboard-focus .ag-tab:focus {
         outline: 1px solid;
-        @include ag-css-var-override(outline, input-focus-border-color);
+        @include ag-color-param(outline, input-focus-border-color);
         outline-offset: -4px;
     }
 
     .ag-tab-selected {
-        @include ag-css-var-override(border-bottom-color, selected-tab-underline-color);
+        @include ag-color-param(border-bottom-color, selected-tab-underline-color);
     }
 
     .ag-menu-header {
-        @include ag-css-var-override(color, secondary-foreground-color);
+        @include ag-color-param(color, secondary-foreground-color);
     }
 
     ////////////////////////////////////////
