--- a/community-modules/core/src/styles/mixins/_ag-theme-params.scss
+++ b/community-modules/core/src/styles/mixins/_ag-theme-params.scss
@@ -67,6 +67,7 @@ $-ag-is-inside-ag-color-param: false;
 $ag-require-colors-to-have-css-var-override: false !global;
 
 // Use a parameter in SCSS, e.g. `color: ag-param(foreground-color)`
+// Note, it is not possible to use this for color params, use the ag-color-param mixin instead
 @function ag-param($name) {
     @if $ag-require-colors-to-have-css-var-override and str-index($name, "-color") and not $-ag-is-inside-ag-color-param {
         // uncomment during development to catch use of 
@@ -87,7 +88,7 @@ $ag-require-colors-to-have-css-var-override: false !global;
     @return $resolved;
 }
 
-@mixin ag-css-var-override($property, $param-name, $important: false) {
+@mixin ag-color-param($property, $param-name, $important: false) {
     $-is-inside-ag-color-param: true !global;
     $value: ag-param($param-name);
     $important: if($important, !important, null);
